# remote-mcp-adapter

./: .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  Dockerfile  README.md  SECURITY.md  compose.yaml  config.yaml  config.yaml.template  config.yaml.template.yaml  index.html  mkdocs.yaml  objects.inv  pyproject.toml  sitemap.xml
.github/badges/: coverage-badge.json
.github/workflows/: coverage-badge.yml  docker.yml  docs.yml  helm.yml  lint.yml  release-changelog.yml  tests.yml
api/: index.html
api/internal/: index.html
api/public/: index.html
assets/stylesheets/: site-overrides.css
charts/remote-mcp-adapter/: Chart.yaml  values.yaml
config-reference/: index.html
configuration/: index.html
configuration/agent-optimized-code-mode/: index.html
configuration/config-reference/: index.html
configuration/distributed-production/: index.html
configuration/high-observability/: index.html
configuration/high-security/: index.html
configuration/local-dev/: index.html
configuration/passthrough-only-gateway/: index.html
configuration/private-demo-links/: index.html
core-concepts/: index.html
deployment/: index.html
docs/: config-reference.md  configuration.md  core-concepts.md  deployment.md  getting-started.md  health.md  how-it-works.md  index.md  security.md  telemetry.md  troubleshooting.md
getting-started/: index.html
health/: index.html
how-it-works/: index.html
search/: search_index.json
security/: index.html
telemetry/: index.html
tests/: test_server.py
troubleshooting/: index.html
(+234 files in other folders)
