[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xena-playwright-mcp-wrapper"
version = "0.1.0"
description = "Playwright MCP Streamable HTTP wrapper with session-scoped artifacts and uploads."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastmcp==3.0.2",
  "fastapi>=0.133.1",
  "uvicorn>=0.41.0",
  "pyyaml>=6.0.3"
]

[project.optional-dependencies]
dev = [
  "black>=24.8.0",
  "ruff>=0.6.9",
  "mypy>=1.11.2",
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0",
  "pre-commit>=4.3.0"
]

[project.scripts]
xena-playwright-mcp-wrapper = "xena_playwright_mcp_wrapper.__main__:main"
mcp-general-adapter = "mcp_general_adapter.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/xena_playwright_mcp_wrapper", "src/mcp_general_adapter"]

[tool.hatch.build.targets.sdist]
include = ["src/xena_playwright_mcp_wrapper", "src/mcp_general_adapter", "README.md"]

[tool.black]
line-length = 128
target-version = ["py311"]

[tool.ruff]
line-length = 128
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["E402"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = false
show_error_codes = true
disable_error_code = ["arg-type", "call-overload"]
